# skg_bot

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.yml
docker/: Dockerfile
src/: main.rs
