[package]
name = "skg_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.113"
serde = "1.0.196"
chrono = "0.4.34"
